# sg_tourist_model

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
data/manual/: travel_windows.csv
src/sg_tourist_model/: __init__.py  calendar_features.py  cli.py  config.py  data.py  features.py  international_school_calendars.py  model.py  pipeline.py  pressure.py  school_calendars.py
tests/: test_calendar_features.py  test_data.py  test_international_school_calendars.py  test_model.py  test_school_calendars.py
web/: next.config.ts  tsconfig.pages.json
web/.openai/: hosting.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/data/: dashboard.json
web/tests/: rendered-html.test.mjs
